# echofocus

./: .gitignore  LICENSE.md  README.md  _config.yml  datasets.py  echofocus.py  export_session_logs.py  index.md  integrated_gradients.py  models.py  panecho.py  pyproject.toml  seeds.txt  submit_jobs.py  utils.py  video_processing.py
.github/workflows/: pages.yml
embed/: 01_setup_folders.py  02_make_batches.py  process_batch.py
experiments/: end2end.yaml  end2end_smoke.yaml
scripts/: train_multiquery.sh  train_multiquery_chd.sh  train_multiquery_fyler.sh  train_multiquery_measure.sh  train_ping_pong_example.sh  use_e2e_model.sh
src/echofocus/: __init__.py  __main__.py  app.py  checkpoints.py  cli.py  data.py  datasets.py  echofocus.py  evaluation.py  models.py  monitoring.py  panecho.py  state.py  training.py  utils.py
