[project]
name = "echo-focus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fire>=0.7.1",
    "h5py>=3.14.0",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.9.4",
    "nbstripout>=0.8.2",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
